
****  --output-split is now on by default. VM_PARALLEL_BUILDS is set by
      default iff the --output-split caused an actual file split to occur.
      --output-split-cfuncs and --output-split-ctrace now default to the
      value of --output-split. These changes should improve build times of
      medium and large designs with default options. User makefiles may
      require changes.


* Verilator 4.034 2020-05-03

**    Add simplistic class support with many restrictions, see manual. (#377)

**    Support IEEE time units and time precisions. (#234)
      Includes `timescale, $printtimescale, $timeformat.
      VL_TIME_MULTIPLIER, VL_TIME_PRECISION, VL_TIME_UNIT have been removed
      and the time precision must now match the SystemC time precision. To
      get closer behavior to older versions, use e.g. --timescale-override
      "1ps/1ps".

**    Add --build to call make automatically. (#2249) [Yutetsu TAKATSUKASA]

**    Configuring with ccache present now defaults to using it; see OBJCACHE.

**    Fix DPI import/export to be standard compliant. (#2236) [Geza Lore]

**    Add --trace-threads for general multithreaded tracing. (#2269) [Geza Lore]

***   Add --flatten for use with --xml-only. (#2270) [James Hanlon]

****  Greatly improve FST/VCD dump performance (#2244) (#2246) (#2250) (#2257) [Geza Lore]

****  Support $ferror, and $fflush without arguments. (#1638)

****  Support event data type (with some restrictions).

****  Support $root. (#2150) [Keyi Zhang]

****  Add error if use SystemC 2.2 and earlier (pre-2011) as is deprecated.

****  Fix build of fast path tracing code to use OPT_FAST. (#2245) [Geza Lore]

****  Fix arrayed instances connecting to slices. (#2263) [Don/engr248]

****  Fix error on unpacked connecting to packed. (#2288) [Joseph Shaker]

****  Fix logical not optimization with empty begin. (#2291) [Baltazar Ortiz]

****  Fix reduction OR on wide data, broke in v4.026. (#2300) [Jack Koenig]
